# LastSheel

./: .gitignore  Cargo.toml  README.md  eslint.config.js  package.json  plan.md  pnpm-lock.yaml
.github/workflows/: ci.yml
crates/lastsheel-core/: Cargo.toml
crates/lastsheel-core/src/: lib.rs
src/: App.css  App.tsx  navigation.ts  pages.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/features/keychain/: KeychainWorkspace.tsx  keychain-workspace.css
src/features/known-hosts/: KnownHostsWorkspace.tsx  known-hosts-workspace.css
src/features/system/: SystemWorkspace.tsx  system-workspace.css
src/features/terminal/: HostsWorkspace.tsx  TerminalPane.tsx  encoding.ts  hosts-workspace.css  types.ts
