[package]
name = "lastsheel-desktop"
version = "0.1.0"
description = "LastSheel Desktop"
authors = ["LastSheel Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lastsheel_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lastsheel-core = { path = "../crates/lastsheel-core" }
base64 = "0.22"
portable-pty = "0.9"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
argon2 = "0.5"
aes-gcm-siv = "0.11"
rand = "0.8"
